change: update alacritty, joshuto, shortcuts configuration

--- a/.config/shortcuts/bspwm.toml
+++ b/.config/shortcuts/bspwm.toml
@@ -1,17 +1,17 @@
 [bspwm]
 
 keymap = [
-  { keys = ["Super","Enter"], command = "termial" },
-  { keys = ["Super","_p"], command = "float termial" },
-  { keys = ["Super","_b"], command = "eww dashboard" },
-  { keys = ["Super","_d"], command = "rofi" },
-  { keys = ["Super","Alt","_q"], command = "quit bspwm" },
-  { keys = ["Super","Alt","_r"], command = "reload bspwm" },
-  { keys = ["Super","_m"], command = "monocle layout" },
-  { keys = ["Super","_t"], command = "titled state" },
-  { keys = ["Super","Shift","_t"], command = "pseudo_titled state" },
-  { keys = ["Super","Shift","_q"], command = "close node" },
-  { keys = ["Super","_q"], command = "close node" },
-  { keys = ["Super","_m"], command = "switch tiled and monocle" },
-  { keys = ["Shift","Alt","_x"], command = "lock screen" },
+  { keys = ["super+enter"], command = "open termial" },
+  { keys = ["super+p"], command = "float termial" },
+  { keys = ["super+b"], command = "eww dashboard" },
+  { keys = ["super+d"], command = "rofi" },
+  { keys = ["super+alt+q"], command = "quit bspwm" },
+  { keys = ["super+alt+r"], command = "reload bspwm" },
+  { keys = ["super+m"], command = "monocle layout" },
+  { keys = ["super+t"], command = "titled state" },
+  { keys = ["super+shift+t"], command = "pseudo_titled state" },
+  { keys = ["super+shift+q"], command = "close node" },
+  { keys = ["super+q"], command = "close node" },
+  { keys = ["super+m"], command = "switch tiled and monocle" },
+  { keys = ["shift+alt+x"], command = "lock screen" },
 ]
