feat: tmux keybind and pane configuration
1. change keybind on copy mode vi
	- `v` to begin selection
	- `C-v` to enter block selection
	- `y` to copy selection
2. window and pane base index to 1
3. index renumber automatically when pane or window close

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,6 +9,10 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+set -g base-index 1
+set -g pane-base-index 1
+set -g renumber-windows on
+
 # ========== theme ==========
 
 # general
@@ -17,7 +21,7 @@ set -g @catppuccin_flavour 'frappe' # or latte, macchiato, mocha
 
 # window
 set -g @catppuccin_window_status_enable "yes"
-set -g @catppuccin_window_status_icon_enable "no"
+set -g @catppuccin_window_status_icon_enable "yes"
 
 # status
 set -g @catppuccin_status_modules_right "directory application session date_time"
@@ -30,6 +34,9 @@ set -g @catppuccin_date_time_text "%m-%d %H:%M"
 
 # ========== keymaps ==========
 setw -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 set -g prefix C-s
 unbind C-b
