--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -21,7 +21,7 @@ set -g @catppuccin_flavour 'frappe' # or latte, macchiato, mocha
 
 # window
 set -g @catppuccin_window_status_enable "yes"
-set -g @catppuccin_window_status_icon_enable "yes"
+set -g @catppuccin_window_status_icon_enable "no"
 
 # status
 set -g @catppuccin_status_modules_right "directory application session date_time"
@@ -65,9 +65,16 @@ bind v split-window -h -c "#{pane_current_path}"
 unbind \"
 bind h split-window -c "#{pane_current_path}"
 
+# ========== session ==========
+ 
+set -g @resurrect-strategy-nvim 'session'
+set -g status-right 'Continuum status: #{continuum_status}'
+
 # ========== plugins ==========
 
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
