--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -68,7 +68,7 @@ bind h split-window -c "#{pane_current_path}"
 # ========== session ==========
  
 set -g @resurrect-strategy-nvim 'session'
-set -g status-right 'Continuum status: #{continuum_status}'
+# set -g status-right 'Continuum status: #{continuum_status}'
 
 # ========== plugins ==========
 
