--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-import = ["/home/tpcad/.config/alacritty/catppuccin-frappe.toml"]
 
 [env]
 TERM = "xterm-256color"
@@ -29,3 +28,6 @@ style = "Regular"
 [font.offset]
 x = 0
 y = 0
+
+[general]
+import = ["/home/tpcad/.config/alacritty/catppuccin-frappe.toml"]
