fix: polybar battery style at full capacity

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -225,6 +225,7 @@ animation-charging-font = 6
 ; Framerate in milliseconds
 animation-charging-framerate = 750
 
+format-full = <ramp-capacity>
 
 ; Available tags:
 ;   <label-discharging> (default)
