feat: scripts control for polybar modules

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -106,11 +106,11 @@ interval = 3.0
 format-connected = <ramp-signal>
 
 ; Only applies if <ramp-signal> is used
-ramp-signal-0 = "%{A1:$HOME/.config/polybar/scripts/wifi_switch:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤯 %{A}%{A}"
-ramp-signal-1 = "%{A1:$HOME/.config/polybar/scripts/wifi_switch:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤟 %{A}%{A}"
-ramp-signal-2 = "%{A1:$HOME/.config/polybar/scripts/wifi_switch:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤢 %{A}%{A}"
-ramp-signal-3 = "%{A1:$HOME/.config/polybar/scripts/wifi_switch:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤥 %{A}%{A}"
-ramp-signal-4 = "%{A1:$HOME/.config/polybar/scripts/wifi_switch:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤨 %{A}%{A}"
+ramp-signal-0 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤯 %{A}%{A}"
+ramp-signal-1 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤟 %{A}%{A}"
+ramp-signal-2 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤢 %{A}%{A}"
+ramp-signal-3 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤥 %{A}%{A}"
+ramp-signal-4 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤨 %{A}%{A}"
 ramp-signal-foreground = ${colors.lavendar}
 ramp-signal-background = ${colors.background}
 ramp-signal-font = 7
@@ -120,7 +120,7 @@ ramp-signal-font = 7
 format-disconnected = <label-disconnected>
 
 ; Default: (none)
-label-disconnected = "%{A1:$HOME/.config/polybar/scripts/wifi_switch:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤭 %{A}%{A}"
+label-disconnected = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤭 %{A}%{A}"
 label-disconnected-foreground = ${colors.alert}
 label-disconnected-background = ${colors.background}
 label-disconnected-font = 7
@@ -143,9 +143,9 @@ interval = 5
 format-volume = <ramp-volume>
 
 ; Only applies if <ramp-volume> is used
-ramp-volume-0 = "%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
-ramp-volume-1 = "%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
-ramp-volume-2 = "%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
+ramp-volume-0 = "%{A5:$HOME/.config/scripts/volume down notify:}%{A4:$HOME/.config/scripts/volume up notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}%{A}%{A}"
+ramp-volume-1 = "%{A5:$HOME/.config/scripts/volume down notify:}%{A4:$HOME/.config/scripts/volume up notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}%{A}%{A}"
+ramp-volume-2 = "%{A5:$HOME/.config/scripts/volume down notify:}%{A4:$HOME/.config/scripts/volume up notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}%{A}%{A}"
 ramp-volume-font = 7
 ramp-volume-background = ${colors.background}
 
@@ -169,11 +169,11 @@ reverse-scroll = true
 type = internal/backlight
 card = amdgpu_bl1
 use-actual-brightness = true
-enable-scroll = true
+; enable-scroll = true
 scroll-interval = 10
 
 format = <label>
-label = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
+label = "%{A5:$HOME/.config/scripts/backlight down notify:}%{A4:$HOME/.config/scripts/backlight up notify:}%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}%{A}%{A}"
 label-font = 7
 label-background = ${colors.background}
 label-foreground = ${colors.yellow}
@@ -256,10 +256,10 @@ animation-low-font = 7
 
 [module/bluetooth]
 type = custom/script
-exec = ~/.config/polybar/scripts/bluetooth
+exec = ~/.config/scripts/bluetooth icon
 interval = 2
 click-right = exec eww open --toggle settings -c $HOME/.config/eww/settings
-click-left = exec ~/.config/polybar/scripts/bluetooth_switch
+click-left = exec ~/.config/scripts/bluetooth toggle notify
 format-font = 6
 format-background = ${colors.background}
 format-foreground = ${colors.blue}
