--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -6,11 +6,11 @@ TERM = "xterm-256color"
 size = 18.0
 
 [font.bold]
-family = "Hack Nerd Font Mono"
+family = "Maple Mono SC NF"
 style = "Bold"
 
 [font.bold_italic]
-family = "Hack Nerd Font Mono"
+family = "Maple Mono SC NF"
 style = "Bold Italic"
 
 [font.glyph_offset]
@@ -18,11 +18,11 @@ x = 0
 y = 0
 
 [font.italic]
-family = "Hack Nerd Font Mono"
+family = "Maple Mono SC NF"
 style = "Italic"
 
 [font.normal]
-family = "Hack Nerd Font Mono"
+family = "Maple Mono SC NF"
 style = "Regular"
 
 [font.offset]
