feat(tmux): update theme configuration

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # ========== general ==========
 
 set -g mouse on
-
+set -g default-terminal "tmux-256color"
 set -g history-limit 10000
 
 # open window and pane in current path
@@ -12,25 +12,6 @@ bind % split-window -h -c "#{pane_current_path}"
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
-
-# ========== theme ==========
-
-# general
-set-option -sa terminal-features ',xterm-256color:RGB'
-set -g @catppuccin_flavour 'frappe' # or latte, macchiato, mocha
-
-# window
-set -g @catppuccin_window_status_enable "yes"
-set -g @catppuccin_window_status_icon_enable "no"
-
-# status
-set -g @catppuccin_status_modules_right "directory application session date_time"
-
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_right_separator "█"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
-set -g @catppuccin_date_time_text "%m-%d %H:%M"
 
 # ========== keymaps ==========
 setw -g mode-keys vi
@@ -72,7 +53,8 @@ set -g @resurrect-strategy-nvim 'session'
 
 # ========== plugins ==========
 
-set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'catppuccin/tmux#v2.1.2'
+set -g @plugin 'git@github.com:TPCAD/tmux-catppuccin'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
@@ -84,6 +66,28 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# ========== theme ==========
+
+# general
+set-option -sa terminal-features ',xterm-256color:RGB'
+
+set -g @catppuccin_flavor "frappe" # or latte, macchiato, mocha
+
+set -g @catppuccin_window_text " #{pane_current_path}"
+set -g @catppuccin_window_current_text " #{pane_current_path}"
+set -g @catppuccin_window_current_number_color "#{@thm_pink}"
+set -g @catppuccin_date_time_text " %m-%d %H:%M"
+
+set -ogq @catppuccin_status_left_separator "█"
+set -g status-left ""
+
+set -g status-right "#{E:@catppuccin_status_directory}"
+set -ag status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_date_time}"
+
+set -g status-right-length 100
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
