--- a/.config/yazi/package.toml
+++ b/.config/yazi/package.toml
@@ -1,5 +1,24 @@
-[plugin]
-deps = [{ use = "yazi-rs/plugins:full-border", rev = "ec97f88" }, { use = "yazi-rs/plugins:smart-enter", rev = "ec97f88" }]
+[[plugin.deps]]
+use = "yazi-rs/plugins:full-border"
+rev = "7112e91"
+hash = "1f3dad061209081a6b04dd6ff2cb06c7"
 
-[flavor]
-deps = [{ use = "yazi-rs/flavors:catppuccin-frappe", rev = "8458d25" }, { use = "sanjinso/monokai-vibrant", rev = "8b68223" }, { use = "Chromium-3-Oxide/everforest-medium", rev = "65bc09b" }]
+[[plugin.deps]]
+use = "yazi-rs/plugins:smart-enter"
+rev = "7112e91"
+hash = "7918aab6a71caf31b58411f789195677"
+
+[[flavor.deps]]
+use = "yazi-rs/flavors:catppuccin-frappe"
+rev = "68326b4"
+hash = "7780fbbc8965da5a31a76a0dcd4d1216"
+
+[[flavor.deps]]
+use = "sanjinso/monokai-vibrant"
+rev = "8b68223"
+hash = "f4458ebaf8961d714eba05fe5ba40166"
+
+[[flavor.deps]]
+use = "Chromium-3-Oxide/everforest-medium"
+rev = "3d5f847"
+hash = "9b4190e2447f2c843fee23ea5f068f6"
