refactor(font): update font name

--- a/.config/fontconfig/conf.d/99-alias-fonts.conf
+++ b/.config/fontconfig/conf.d/99-alias-fonts.conf
@@ -2,7 +2,7 @@
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
   <alias>
-    <family>Maple Mono NF CN</family>
+    <family>Maple Mono NL NF CN</family>
     <prefer>
         <family>Hack Nerd Font Mono</family>
         <family>HarmonyOS Sans SC</family>
