refactor(tmux): use universal plugins directory for tpm

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -90,4 +90,4 @@ set -ag status-right "#{E:@catppuccin_status_date_time}"
 set -g status-right-length 100
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
