--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # ========== general ==========
 
+set -g default-command /bin/bash
 set -g mouse on
 set -g default-terminal "tmux-256color"
 set -g history-limit 10000
