refactor(polybar): line bar style

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,38 +17,44 @@
 ;==========================================================
 
 [colors]
-transparent = #00
-background = #303446
-background-alt = #414559
-foreground = #c6d0f5
-primary = #ca9ee6
-secondary = #a6d189
-alert = #e78284
-disabled = #626880
-blue = #8caaee
-yellow = #e5c890
-orange = #ef9f76
+rosewater = #f2d5cf
+flamingo = #eebebe
+mauve = #ca9ee6
+red = #e78284
 pink = #f4b8e4
+maroon = #ea999c
+peach=#ef9f76
+yellow = #e5c890
+green = #a6d189
 teal = #81c8be
 sky = #99d1db
-green = #a6d189
-maroon = #ea999c
 sapphire = #85c1dc
+blue = #8caaee
 lavendar = #babbf1
-flamingo = #eebebe
+text = #c6d0f5
+subtext1 = #b5bfe2
+subtext0 = #a5adce
+overlay2 = #949cbb
+overlay1 = #838ba7
+overlay0 = #737994
+surface2 = #626880
+surface1 = #51576d
+surface0 = #414559
+base = #303446
+mantle = #292c3c
+crust = #232634
+transparent = #00
 
 [bar/bar]
 ; percentage or pixel
-width = 98%
-height = 38pt
+width = 100%
+height = 30pt
 ; place the modules-center in the middle of the bar
 fixed-center = true
-offset-x = 18
-offset-y = 8
+offset-x = 0
+offset-y = 0
 
-; background = ${colors.background}
-; foreground = ${colors.foreground}
-background = ${colors.transparent}
+background = ${colors.crust}
 
 ; for xworkspaces
 font-0 = Hack Nerd Font Mono:style=Bold:size=24;6
@@ -65,9 +71,9 @@ font-5 = Hack Nerd Font Mono:style=Bold:size=20;5
 ; for network, pulseaudio, backlight battery and bluetooth icons
 font-6 = Hack Nerd Font Mono:style=Bold:size=24;5
 
-modules-center = left1 xworkspaces right1
-modules-right = left2 memory-icon memory cpu-icon cpu fs-icon filesystem right2 separator1 left2 network pulseaudio backlight battery bluetooth right2 separator1 left2 date right2
-modules-left = left2 arch right2
+modules-left = separator1 arch separator1  xworkspaces
+modules-center = date
+modules-right =  memory-icon memory cpu-icon cpu fs-icon filesystem  separator1  network pulseaudio backlight battery bluetooth separator1
 
 ; cursor style while hovering on the modules
 cursor-click = pointer
@@ -76,8 +82,8 @@ cursor-scroll = default
 enable-ipc = true
 wm-restack = bspwm
 
-include-file = ~/.config/polybar/modules.ini 
-include-file = ~/.config/polybar/gylphs.ini
+include-file = ~/.config/polybar/modules.ini
+; include-file = ~/.config/polybar/gylphs.ini
 
 [settings]
 screenchange-reload = true
