--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -3,33 +3,33 @@ type = internal/xworkspaces
 
 label-active = "󰮯"
 label-active-foreground = ${colors.pink}
-label-active-background = ${colors.background}
+label-active-background = ${colors.crust}
 label-active-padding = 1
-label-active-font = 1
+label-active-font = 7
 
 label-occupied = "󰊠"
 label-occupied-foreground = ${colors.sky}
-label-occupied-background = ${colors.background}
+label-occupied-background = ${colors.crust}
 label-occupied-padding = 1
-label-occupied-font = 1
+label-occupied-font = 7
 
 label-urgent = ""
-label-urgent-foreground = ${colors.alert}
-label-urgent-background = ${colors.background}
-label-urgent-font = 1
+label-urgent-foreground = ${colors.red}
+label-urgent-background = ${colors.crust}
+label-urgent-font = 7
 label-urgent-padding = 1
 
 label-empty = ""
-label-empty-foreground = ${colors.disabled}
-label-empty-background = ${colors.background}
-label-empty-font = 1
+label-empty-foreground = ${colors.surface2}
+label-empty-background = ${colors.crust}
+label-empty-font = 7
 label-empty-padding = 1
 
 [module/memory-icon]
 type = custom/text
 content = "%{A1:#memory.module_toggle:} %{A}"
-content-font = 6
-content-background = ${colors.background}
+content-font = 7
+content-background = ${colors.crust}
 content-foreground = ${colors.teal}
 
 [module/memory]
@@ -40,7 +40,7 @@ type = internal/memory
 interval = 5
 
 format = "%{A1:#memory.module_toggle:}<label>%{A}"
-format-background = ${colors.background}
+format-background = ${colors.crust}
 format-foreground = ${colors.teal}
 label-font = 3
 label = "%percentage_used%% "
@@ -49,15 +49,15 @@ hidden = true
 [module/cpu-icon]
 type = custom/text
 content = "%{A1:#cpu.module_toggle:} %{A}"
-content-font = 6
-content-background = ${colors.background}
+content-font = 7
+content-background = ${colors.crust}
 content-foreground = ${colors.maroon}
 
 [module/cpu]
 type = internal/cpu
 interval = 5
 format = "%{A1:#cpu.module_toggle:}<label>%{A}"
-format-background = ${colors.background}
+format-background = ${colors.crust}
 format-foreground = ${colors.maroon}
 label-font = 3
 label = "%percentage%% "
@@ -66,8 +66,8 @@ hidden = true
 [module/fs-icon]
 type = custom/text
 content = "%{A1:#filesystem.module_toggle:}%{A}"
-content-font = 6
-content-background = ${colors.background}
+content-font = 7
+content-background = ${colors.crust}
 content-foreground = ${colors.sapphire}
 
 [module/filesystem]
@@ -76,7 +76,7 @@ mount-0 = /
 interval = 10
 fixed-values = true
 format-mounted = "%{A1:#filesystem.module_toggle:}<label-mounted>%{A}"
-format-mounted-background = ${colors.background}
+format-mounted-background = ${colors.crust}
 format-mounted-foreground = ${colors.sapphire}
 label-mounted = " %percentage_used%%"
 label-mounted-font = 3
@@ -112,7 +112,7 @@ ramp-signal-2 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --
 ramp-signal-3 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤥 %{A}%{A}"
 ramp-signal-4 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤨 %{A}%{A}"
 ramp-signal-foreground = ${colors.lavendar}
-ramp-signal-background = ${colors.background}
+ramp-signal-background = ${colors.crust}
 ramp-signal-font = 7
 
 ; Available tags:
@@ -121,8 +121,8 @@ format-disconnected = <label-disconnected>
 
 ; Default: (none)
 label-disconnected = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤭 %{A}%{A}"
-label-disconnected-foreground = ${colors.alert}
-label-disconnected-background = ${colors.background}
+label-disconnected-foreground = ${colors.red}
+label-disconnected-background = ${colors.curst}
 label-disconnected-font = 7
 
 [module/pulseaudio]
@@ -147,7 +147,7 @@ ramp-volume-0 = "%{A5:$HOME/.config/scripts/volume down notify:}%{A4:$HOME/.conf
 ramp-volume-1 = "%{A5:$HOME/.config/scripts/volume down notify:}%{A4:$HOME/.config/scripts/volume up notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}%{A}%{A}"
 ramp-volume-2 = "%{A5:$HOME/.config/scripts/volume down notify:}%{A4:$HOME/.config/scripts/volume up notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}%{A}%{A}"
 ramp-volume-font = 7
-ramp-volume-background = ${colors.background}
+ramp-volume-background = ${colors.curst}
 
 ; Available tags:
 ;   <label-muted> (default)
@@ -159,8 +159,8 @@ format-muted = <label-muted>
 ;   %percentage% (default)
 ;   %decibels%
 label-muted = "%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰝟 %{A}"
-label-muted-foreground = ${colors.alert}
-label-muted-background = ${colors.background}
+label-muted-foreground = ${colors.red}
+label-muted-background = ${colors.curst}
 label-muted-font = 7
 
 reverse-scroll = true
@@ -175,7 +175,7 @@ scroll-interval = 10
 format = <label>
 label = "%{A5:$HOME/.config/scripts/backlight down notify:}%{A4:$HOME/.config/scripts/backlight up notify:}%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}%{A}%{A}"
 label-font = 7
-label-background = ${colors.background}
+label-background = ${colors.curst}
 label-foreground = ${colors.yellow}
 
 [module/battery]
@@ -220,8 +220,8 @@ animation-charging-2 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/set
 animation-charging-3 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
 animation-charging-4 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
 animation-charging-foreground = ${colors.flamingo}
-animation-charging-background = ${colors.background}
-animation-charging-font = 6
+animation-charging-background = ${colors.curst}
+animation-charging-font = 7
 ; Framerate in milliseconds
 animation-charging-framerate = 750
 
@@ -240,7 +240,7 @@ ramp-capacity-1 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings
 ramp-capacity-2 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
 ramp-capacity-3 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
 ramp-capacity-4 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
-ramp-capacity-background = ${colors.background}
+ramp-capacity-background = ${colors.curst}
 ramp-capacity-foreground = ${colors.flamingo}
 ramp-capacity-font = 7
 
@@ -250,8 +250,8 @@ format-low = <animation-low>
 animation-low-0 = " "
 animation-low-1 = " "
 animation-low-framerate = 200
-animation-low-background = ${colors.background}
-animation-low-foreground = ${colors.alert}
+animation-low-background = ${colors.curst}
+animation-low-foreground = ${colors.red}
 animation-low-font = 7
 
 [module/bluetooth]
@@ -261,7 +261,7 @@ interval = 2
 click-right = exec eww open --toggle settings -c $HOME/.config/eww/settings
 click-left = exec ~/.config/scripts/bluetooth toggle notify
 format-font = 6
-format-background = ${colors.background}
+format-background = ${colors.curst}
 format-foreground = ${colors.blue}
 
 [module/date]
@@ -272,7 +272,7 @@ time = "%{A3:eww open --toggle calendar_win -c $HOME/.config/eww/settings:}%H:%M
 time-alt = %T
 
 label-foreground = ${colors.pink}
-label-background = ${colors.background}
+label-background = ${colors.crust}
 
 label = %time%
 label-font = 3
@@ -281,7 +281,7 @@ label-font = 3
 type = custom/text
 format = ""
 format-foreground = ${colors.blue}
-format-background = ${colors.background}
+format-background = ${colors.crust}
 format-font = 7
 
 [module/launcher]
@@ -295,39 +295,8 @@ content-font = 3
 [module/separator1]
 type = custom/text
 format = " "
-format-foreground = ${colors.disabled}
+format-foreground = ${colors.transparent}
 format-font = 1
-
-; [module/github]
-; type = custom/script
-; exec = $HOME/.config/polybar/scripts/github
-; format = <label>
-; label = %output%
-; format-prefix = "󰊤 "
-; format-prefix-font = 3
-; interval = 60
-; format-padding = 3
-;
-; [module/updates]
-; type = custom/script
-; exec = ~/.config/polybar/scripts/updates
-; format = <label>
-; label = "%output%"
-; format-foreground = ${colors.foreground}
-; format-background = ${colors.background-alt}
-; label-font = 12
-; format-font = 6
-; format-prefix = " "
-; interval = 7200
-; click-left = kitty --hold paru
-
-; [module/powermenu]
-; type = custom/text
-; content = "   "
-; content-foreground = ${colors.alert}
-; click-left = eww open-many --toggle background-closer powermenu 
-; content-padding = 0
-; content-font = 5
 
 ; [module/tray]
 ; type = custom/script
