feat(polybar): system tray

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -298,11 +298,7 @@ format = " "
 format-foreground = ${colors.transparent}
 format-font = 1
 
-; [module/tray]
-; type = custom/script
-; exec = tail -F $HOME/.config/polybar/scripts/tray-status 2> /dev/null
-; click-left = $HOME/.config/polybar/scripts/tray --toggle
-; tail = true
-; label-font = 10
-; label-padding = 3
-
+[module/tray]
+type = internal/tray
+tray-spacing = 8px
+tray-background = ${colors.crust}
