refactor(eww): reorganize directory structure of eww, new calendar panel

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -268,7 +268,7 @@ format-foreground = ${colors.blue}
 type = internal/date
 interval = 1
 
-time = "%{A3:eww open --toggle calendar_win -c $HOME/.config/eww/settings:}%H:%M%{A}"
+time = "%{A3:eww open --toggle time-panel -c $HOME/.config/eww:}%H:%M%{A}"
 time-alt = %T
 
 label-foreground = ${colors.pink}
