feat(polybar): click icon open eww panel

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -73,7 +73,7 @@ font-6 = Hack Nerd Font Mono:style=Bold:size=24;5
 
 modules-left = separator1 arch separator1  xworkspaces
 modules-center = date
-modules-right =  memory-icon memory cpu-icon cpu fs-icon filesystem  separator1  network pulseaudio backlight battery bluetooth separator1 tray separator1
+modules-right = tray separator1 memory-icon memory cpu-icon cpu fs-icon filesystem  separator1  network pulseaudio backlight battery bluetooth separator1
 
 ; cursor style while hovering on the modules
 cursor-click = pointer
