--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -27,7 +27,7 @@ label-empty-padding = 1
 
 [module/memory-icon]
 type = custom/text
-content = "%{A1:#memory.module_toggle:} %{A}"
+content = "%{A1:#memory.module_toggle:}%{A3:eww open --toggle settings-panel:} %{A}%{A}"
 content-font = 7
 content-background = ${colors.crust}
 content-foreground = ${colors.teal}
@@ -39,7 +39,7 @@ type = internal/memory
 ; Default: 1
 interval = 5
 
-format = "%{A1:#memory.module_toggle:}<label>%{A}"
+format = "%{A1:#memory.module_toggle:}%{A3:eww open --toggle settings-panel:}<label>%{A}%{A}"
 format-background = ${colors.crust}
 format-foreground = ${colors.teal}
 label-font = 3
@@ -48,7 +48,7 @@ hidden = true
 
 [module/cpu-icon]
 type = custom/text
-content = "%{A1:#cpu.module_toggle:} %{A}"
+content = "%{A1:#cpu.module_toggle:}%{A3:eww open --toggle settings-panel:} %{A}%{A}"
 content-font = 7
 content-background = ${colors.crust}
 content-foreground = ${colors.maroon}
@@ -56,7 +56,7 @@ content-foreground = ${colors.maroon}
 [module/cpu]
 type = internal/cpu
 interval = 5
-format = "%{A1:#cpu.module_toggle:}<label>%{A}"
+format = "%{A1:#cpu.module_toggle:}%{A3:eww open --toggle settings-panel:}<label>%{A}%{A}"
 format-background = ${colors.crust}
 format-foreground = ${colors.maroon}
 label-font = 3
@@ -65,7 +65,7 @@ hidden = true
 
 [module/fs-icon]
 type = custom/text
-content = "%{A1:#filesystem.module_toggle:}%{A}"
+content = "%{A1:#filesystem.module_toggle:}%{A3:eww open --toggle settings-panel:}%{A}%{A}"
 content-font = 7
 content-background = ${colors.crust}
 content-foreground = ${colors.sapphire}
@@ -75,7 +75,7 @@ type = internal/fs
 mount-0 = /
 interval = 10
 fixed-values = true
-format-mounted = "%{A1:#filesystem.module_toggle:}<label-mounted>%{A}"
+format-mounted = "%{A1:#filesystem.module_toggle:}%{A3:eww open --toggle settings-panel:}<label-mounted>%{A}%{A}"
 format-mounted-background = ${colors.crust}
 format-mounted-foreground = ${colors.sapphire}
 label-mounted = " %percentage_used%%"
@@ -106,11 +106,11 @@ interval = 3.0
 format-connected = <ramp-signal>
 
 ; Only applies if <ramp-signal> is used
-ramp-signal-0 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤯 %{A}%{A}"
-ramp-signal-1 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤟 %{A}%{A}"
-ramp-signal-2 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤢 %{A}%{A}"
-ramp-signal-3 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤥 %{A}%{A}"
-ramp-signal-4 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤨 %{A}%{A}"
+ramp-signal-0 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings-panel:}󰤯 %{A}%{A}"
+ramp-signal-1 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings-panel:}󰤟 %{A}%{A}"
+ramp-signal-2 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings-panel:}󰤢 %{A}%{A}"
+ramp-signal-3 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings-panel:}󰤥 %{A}%{A}"
+ramp-signal-4 = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings-panel:}󰤨 %{A}%{A}"
 ramp-signal-foreground = ${colors.lavendar}
 ramp-signal-background = ${colors.crust}
 ramp-signal-font = 7
@@ -120,7 +120,7 @@ ramp-signal-font = 7
 format-disconnected = <label-disconnected>
 
 ; Default: (none)
-label-disconnected = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰤭 %{A}%{A}"
+label-disconnected = "%{A1:$HOME/.config/scripts/wifi toggle notify:}%{A3:eww open --toggle settings-panel:}󰤭 %{A}%{A}"
 label-disconnected-foreground = ${colors.red}
 label-disconnected-background = ${colors.curst}
 label-disconnected-font = 7
@@ -143,9 +143,9 @@ interval = 5
 format-volume = <ramp-volume>
 
 ; Only applies if <ramp-volume> is used
-ramp-volume-0 = "%{A5:$HOME/.config/scripts/volume down notify:}%{A4:$HOME/.config/scripts/volume up notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}%{A}%{A}"
-ramp-volume-1 = "%{A5:$HOME/.config/scripts/volume down notify:}%{A4:$HOME/.config/scripts/volume up notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}%{A}%{A}"
-ramp-volume-2 = "%{A5:$HOME/.config/scripts/volume down notify:}%{A4:$HOME/.config/scripts/volume up notify:}%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}%{A}%{A}"
+ramp-volume-0 = "%{A5:$HOME/.config/scripts/volume down notify:}%{A4:$HOME/.config/scripts/volume up notify:}%{A3:eww open --toggle settings-panel:} %{A}%{A}%{A}"
+ramp-volume-1 = "%{A5:$HOME/.config/scripts/volume down notify:}%{A4:$HOME/.config/scripts/volume up notify:}%{A3:eww open --toggle settings-panel:} %{A}%{A}%{A}"
+ramp-volume-2 = "%{A5:$HOME/.config/scripts/volume down notify:}%{A4:$HOME/.config/scripts/volume up notify:}%{A3:eww open --toggle settings-panel:} %{A}%{A}%{A}"
 ramp-volume-font = 7
 ramp-volume-background = ${colors.curst}
 
@@ -158,7 +158,7 @@ format-muted = <label-muted>
 ; Available tokens:
 ;   %percentage% (default)
 ;   %decibels%
-label-muted = "%{A3:eww open --toggle settings -c $HOME/.config/eww/settings:}󰝟 %{A}"
+label-muted = "%{A3:eww open --toggle settings-panel:}󰝟 %{A}"
 label-muted-foreground = ${colors.red}
 label-muted-background = ${colors.curst}
 label-muted-font = 7
@@ -173,7 +173,7 @@ use-actual-brightness = true
 scroll-interval = 10
 
 format = <label>
-label = "%{A5:$HOME/.config/scripts/backlight down notify:}%{A4:$HOME/.config/scripts/backlight up notify:}%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}%{A}%{A}"
+label = "%{A5:$HOME/.config/scripts/backlight down notify:}%{A4:$HOME/.config/scripts/backlight up notify:}%{A1:eww open --toggle settings-panel:}%{A3:eww open --toggle settings-panel:} %{A}%{A}%{A}%{A}"
 label-font = 7
 label-background = ${colors.curst}
 label-foreground = ${colors.yellow}
@@ -214,11 +214,11 @@ poll-interval = 5
 format-charging = <animation-charging>
 
 ; Only applies if <animation-charging> is used
-animation-charging-0 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
-animation-charging-1 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
-animation-charging-2 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
-animation-charging-3 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
-animation-charging-4 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
+animation-charging-0 = "%{A1:eww open --toggle settings-panel:}%{A3:eww open --toggle settings-panel:} %{A}%{A}"
+animation-charging-1 = "%{A1:eww open --toggle settings-panel:}%{A3:eww open --toggle settings-panel:} %{A}%{A}"
+animation-charging-2 = "%{A1:eww open --toggle settings-panel:}%{A3:eww open --toggle settings-panel:} %{A}%{A}"
+animation-charging-3 = "%{A1:eww open --toggle settings-panel:}%{A3:eww open --toggle settings-panel:} %{A}%{A}"
+animation-charging-4 = "%{A1:eww open --toggle settings-panel:}%{A3:eww open --toggle settings-panel:} %{A}%{A}"
 animation-charging-foreground = ${colors.flamingo}
 animation-charging-background = ${colors.curst}
 animation-charging-font = 7
@@ -235,11 +235,11 @@ format-full = <ramp-capacity>
 format-discharging = <ramp-capacity>
 
 ; Only applies if <ramp-capacity> is used
-ramp-capacity-0 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
-ramp-capacity-1 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
-ramp-capacity-2 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
-ramp-capacity-3 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
-ramp-capacity-4 = "%{A1:eww open --toggle settings -c $HOME/.config/eww/settings:} %{A}"
+ramp-capacity-0 = "%{A1:eww open --toggle settings-panel:}%{A3:eww open --toggle settings-panel:} %{A}%{A}"
+ramp-capacity-1 = "%{A1:eww open --toggle settings-panel:}%{A3:eww open --toggle settings-panel:} %{A}%{A}"
+ramp-capacity-2 = "%{A1:eww open --toggle settings-panel:}%{A3:eww open --toggle settings-panel:} %{A}%{A}"
+ramp-capacity-3 = "%{A1:eww open --toggle settings-panel:}%{A3:eww open --toggle settings-panel:} %{A}%{A}"
+ramp-capacity-4 = "%{A1:eww open --toggle settings-panel:}%{A3:eww open --toggle settings-panel:} %{A}%{A}"
 ramp-capacity-background = ${colors.curst}
 ramp-capacity-foreground = ${colors.flamingo}
 ramp-capacity-font = 7
@@ -258,7 +258,7 @@ animation-low-font = 7
 type = custom/script
 exec = ~/.config/scripts/bluetooth icon
 interval = 2
-click-right = exec eww open --toggle settings -c $HOME/.config/eww/settings
+click-right = exec eww open --toggle settings-panel
 click-left = exec ~/.config/scripts/bluetooth toggle notify
 format-font = 6
 format-background = ${colors.curst}
@@ -268,7 +268,7 @@ format-foreground = ${colors.blue}
 type = internal/date
 interval = 1
 
-time = "%{A3:eww open --toggle time-panel -c $HOME/.config/eww:}%H:%M%{A}"
+time = "%{A3:eww open --toggle time-panel:}%H:%M%{A}"
 time-alt = %T
 
 label-foreground = ${colors.pink}
@@ -298,7 +298,14 @@ format = " "
 format-foreground = ${colors.transparent}
 format-font = 1
 
+[module/custom-tray]
+type = custom/text
+click-left = $HOME/.config/scripts/tray.sh
+format = ""
+format-foreground = ${colors.pink}
+format-font = 3
+
 [module/tray]
 type = internal/tray
-tray-spacing = 8px
+tray-spacing = 12px
 tray-background = ${colors.crust}
