feat(polybar): separator between arch logo and xworkspace

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -298,6 +298,12 @@ format = " "
 format-foreground = ${colors.transparent}
 format-font = 1
 
+[module/separator2]
+type = custom/text
+format = "|"
+format-foreground = ${colors.text}
+format-font = 8
+
 [module/custom-tray]
 type = custom/text
 click-left = $HOME/.config/scripts/tray.sh
