--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -70,8 +70,10 @@ font-4 = Hack Nerd Font Mono:style=Bold:size=32;8
 font-5 = Hack Nerd Font Mono:style=Bold:size=20;5
 ; for network, pulseaudio, backlight battery and bluetooth icons
 font-6 = Hack Nerd Font Mono:style=Bold:size=24;5
+; for separator2
+font-7 = Hack Nerd Font Mono:style=Bold:size=20;3
 
-modules-left = separator1 arch separator1  xworkspaces
+modules-left = separator1 arch separator1 separator2 xworkspaces
 modules-center = date
 modules-right = tray separator1 memory-icon memory cpu-icon cpu fs-icon filesystem  separator1  network pulseaudio backlight battery bluetooth separator1
 
