feat(polybar): icon to toggle tray visibility

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -306,8 +306,7 @@ format-font = 8
 
 [module/custom-tray]
 type = custom/text
-click-left = $HOME/.config/scripts/tray.sh
-format = ""
+format = "%{A1:#tray.module_toggle:}%{A}"
 format-foreground = ${colors.pink}
 format-font = 3
 
@@ -315,3 +314,4 @@ format-font = 3
 type = internal/tray
 tray-spacing = 12px
 tray-background = ${colors.crust}
+hidden = true
