--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -75,7 +75,7 @@ font-7 = Hack Nerd Font Mono:style=Bold:size=20;3
 
 modules-left = separator1 arch separator1 separator2 xworkspaces
 modules-center = date
-modules-right = tray separator1 memory-icon memory cpu-icon cpu fs-icon filesystem  separator1  network pulseaudio backlight battery bluetooth separator1
+modules-right = tray separator1 custom-tray separator1 memory-icon memory cpu-icon cpu fs-icon filesystem  separator1  network pulseaudio backlight battery bluetooth separator1
 
 ; cursor style while hovering on the modules
 cursor-click = pointer
